--- a/src/wechat_app/app.wxss
+++ b/src/wechat_app/app.wxss
@@ -1,4 +1,13 @@
 /**app.wxss**/
+
+/* 缺少page的配置会导致3D渲染窗口无法显示 */
+page {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   height: 100%;
   display: flex;
